Ward docs update
