# swagger-output.json
@@ -309,14 +309,8 @@
             "name": "memberId",
             "in": "path",
             "required": true,
-            "type": "string"
-          },
-          {
-            "name": "wardId",
-            "in": "path",
-            "description": "A MongoDB ObjectId",
-            "required": true,
-            "type": "string"
+            "type": "string",
+            "description": "A MongoDB ObjectId"
           },
           {
             "name": "member",
@@ -358,14 +352,8 @@
             "name": "memberId",
             "in": "path",
             "required": true,
-            "type": "string"
-          },
-          {
-            "name": "wardId",
-            "in": "path",
-            "description": "A MongoDB ObjectId",
-            "required": true,
-            "type": "string"
+            "type": "string",
+            "description": "A MongoDB ObjectId"
           }
         ],
         "responses": {
